test/expected/parse_recovery_multi.out
shit: 2:1: error: 'fi' has no matching 'if'.
     2 |  fi
       |  ^~ here.
shit: 4:1: error: 'done' has no matching 'while', 'until', or 'for'.
     4 |  done
       |  ^~~~ here.
